get env info from deployments-loggregator
- generate cats config automatically

Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/config/acceptance-environment.yml
+++ b/pipelines/config/acceptance-environment.yml
@@ -1,3 +1,3 @@
 acceptance_env_name: coconut
-acceptance_bbl_state_dir: acceptance-bosh/loggregator/coconut
-acceptance_system_domain: coconut.cf-denver.com
+acceptance_bbl_state_dir: gcp/coconut
+acceptance_system_domain: coconut.loggr.cf-app.com
