get loggregator-ci resource in deploy-cf job
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -2009,6 +2009,7 @@ jobs:
   - bosh-cf-cats
   plan:
   - aggregate:
+    - get: loggregator-ci
     - get: cf-deployment-concourse-tasks
     - get: deployments-loggregator
     - get: cf-acceptance-tests
