kill log stream process on exit
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1401,6 +1401,13 @@ jobs:
           cf install-plugin -f -r "CF-Community" log-stream
 
           cf log-stream service-logs-test > log-stream.log &
+          log_stream_pid=$!
+
+          function cleanup() {
+            kill -9 ${log_stream_pid}
+          }
+          trap cleanup EXIT
+
           if [[ $(cat log-stream.log | grep test-logger | wc -l) -lt 1 ]]; then
             echo "No test-logger logs were received"
             exit 1
