fix inputs to test service logs
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1390,6 +1390,7 @@ jobs:
           repository: loggregator/base
       inputs:
       - name: bbl-state
+      - name: loggregator-ci
       run:
         path: /bin/bash
         args:
