--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1383,42 +1383,11 @@ jobs:
       resource: deployments-loggregator
     - get: loggregator-ci
   - task: test-service-logs
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: bbl-state
-      - name: loggregator-ci
-      params:
-        BBL_STATE_DIR: ((acceptance_bbl_state_dir))
-        CF_API: https://api.((acceptance_system_domain))
-        USERNAME: admin
-      run:
-        path: /bin/bash
-        args:
-        - "-c"
-        - |
-          set -exo pipefail
-
-          source loggregator-ci/scripts/environment-targeting/target-cf.sh && target-cf
-          cf install-plugin -f -r "CF-Community" log-stream
-
-          cf log-stream service-logs-test > log-stream.log &
-          log_stream_pid=$!
-
-          function cleanup() {
-            kill ${log_stream_pid}
-          }
-          trap cleanup EXIT
-
-          sleep 10
-          if [[ $(cat log-stream.log | grep test-logger | wc -l) -lt 1 ]]; then
-            echo "No test-logger logs were received"
-            exit 1
-          fi
+    file: loggregator-ci/tasks/service-logs-test/task.yml
+    params:
+      BBL_STATE_DIR: ((acceptance_bbl_state_dir))
+      CF_API: https://api.((acceptance_system_domain))
+      USERNAME: admin
 
 - name: service-logs-promotion
   serial: true
