add org and space to test service logs
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1384,6 +1384,8 @@ jobs:
       BBL_STATE_DIR: ((acceptance_bbl_state_dir))
       CF_API: https://api.((acceptance_system_domain))
       USERNAME: admin
+      ORG: system
+      SPACE: blackbox-testing
 
 - name: service-logs-promotion
   serial: true
