--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -443,6 +443,13 @@ resources:
     branch: v1.11.x
     tag_filter: v1.11.1
 
+- name: gopsutil
+  type: git
+  source:
+    uri: https://github.com/shirou/gopsutil
+    branch: master
+    tag_filter: v2.19.04
+
 jobs:
 ###############################################################################
 # LOG STREAM CLI
@@ -581,13 +588,37 @@ jobs:
     - get: loggregator-ci
     - get: loggregator-agent
       trigger: true
+    - get: gopsutil
   - do:
     - task: run-tests
-      file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
-      input_mapping:
-        source-repo: loggregator-agent
-      params:
-        IMPORT_PATH: code.cloudfoundry.org/loggregator-agent
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: loggregator/base
+        inputs:
+        - name: loggregator-agent
+          path: src/code.cloudfoundry.org/loggregator-agent
+        - name: gopsutil
+          path: src/github.com/shirou/gopsutil
+        params:
+          IMPORT_PATH: code.cloudfoundry.org/loggregator-agent
+        run:
+          path: bash
+          args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+
+            export GOPATH="$PWD"
+            export PATH="$GOPATH/bin:$PATH"
+
+            pushd "src/$IMPORT_PATH"
+              go get -t -d ./...
+              go test ./... -race
+            popd
   - do:
     - task: build-windows-test-binary
       config:
@@ -598,6 +629,8 @@ jobs:
             repository: loggregator/base
         inputs:
         - name: loggregator-agent
+        - name: gopsutil
+          path: workspace/src/github.com/shirou/gopsutil
         outputs:
         - name: binaries
         - name: test-binaries
