--- a/tasks/go-bump-modules-and-test/task.yml
+++ b/tasks/go-bump-modules-and-test/task.yml
@@ -10,6 +10,9 @@ inputs:
 - name: loggregator-ci # - This repo
 - name: source-repo    # - The Go package to test
 
+outputs:
+- name: bumped-source # A copy of the source-repo with modules updated
+
 run:
-  path: loggregator-ci/tasks/go-mod-test/task
+  path: loggregator-ci/tasks/go-bump-modules-and-test/task
 
