fix cp in go-bump-modules-and-test
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -106,6 +106,7 @@ groups:
 
 - name: service-logs
   jobs:
+  - service-logs-unit-tests
   - service-logs-deploy
   - service-logs-test
   - service-logs-promotion
